--- a/src/Components/Navbar/style.module.scss
+++ b/src/Components/Navbar/style.module.scss
@@ -9,7 +9,7 @@
       width: 100%;
       right: 0;
       height: 65px;
-      z-index: 1000;
+      z-index: 10000;
       visibility: visible;
       transform: translateY(0);
         @media (max-width: '800px') {
@@ -326,13 +326,13 @@
       .sidebar {
           display: none;
           position: fixed;
-          z-index: 999;
+          z-index: 1000;
           background-color: indigo;
           padding: 20px;
           top: 0;
-          width: 80%;
+          width: 50%;
           height: 100vh;
-
+transition: all 0.6s;
           @media (max-width: '1200px') {
               display: block;
           }
