--- a/src/Pages/shop/styles.module.scss
+++ b/src/Pages/shop/styles.module.scss
@@ -1,140 +1,90 @@
 .shop {
-   @media (max-width: '800px') {
-       padding-bottom: 40px;
-    }
+  padding: 15px 20px;
+  @media (max-width: '350px') {
+    padding-bottom: 55px;
+  }
+
   .shop_header {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+padding-bottom: 15px;
 
-    padding: 20px 30px;
-
-    @media (max-width: '800px') {
-       flex-direction: column;
-       justify-content: center;
-       align-items: start;
-       padding: 20px 10px;
-
+    @media (max-width: '450px') {
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+padding-bottom: 15px;
 
     }
 
     .filter_product {
       display: flex;
       justify-content: start;
-      
+
 
     }
   }
 
-  select {
-    background-color: white;
-    border: thin solid blue;
-    border-radius: 4px;
-    display: inline-block;
-    font: inherit;
-    padding: 8px 45px 8px 10px;
-    margin-right: 5px;
-    @media (max-width: '450px') {
-      font-size: 14px;
-      padding: 6px 35px 6px 10px;
-      font: small;
-
-    }
-
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-     
-  }
-  .category_select {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-    option {
-      font-family: 'Montserrat';
-    }
-    margin-right: 20px;
-    background-image: linear-gradient(45deg, transparent 50%, #fff 50%),
-    linear-gradient(135deg, #fff 50%, transparent 50%),
-    linear-gradient(to right, indigo, indigo);
-    background-position: calc(100% - 20px) calc(1em + 2px),
-    calc(100% - 15px) calc(1em + 2px),
-    100% 0;
-    background-size: 5px 5px,
-    5px 5px,
-    2.5em 2.5em;
-    background-repeat: no-repeat;
-
-    &:focus {
-    background-image:
-      linear-gradient(45deg, white 50%, transparent 50%),
-      linear-gradient(135deg, transparent 50%, white 50%),
-      linear-gradient(to right, indigo, indigo);
-    background-position:
-      calc(100% - 15px) 1em,
-      calc(100% - 20px) 1em,
-      100% 0;
-    background-size:
-      5px 5px,
-      5px 5px,
-      2.5em 2.5em;
-    background-repeat: no-repeat;
-    border-color: indigo;
-    outline: 0;
-    option{
-      color: #000;
-    }
-  }
+  .empty_product {
+    transition: all .5s;
+    text-align: center;
   }
 
+  .search_product {
+    position: relative;
 
-
-
-.search_product{
-  position: relative;
-  .search_icon{
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    bottom: 10px;
-     @media (max-width: '800px') {
-      right: 0;
-      top: 25px;
+    .search_icon {
+      position: absolute;
+      right: 10px;
+      top: 10px;
       bottom: 10px;
+       color: #858585;
+      @media (max-width: '450px') {
+        right: 5px;
+        top: 5px;
+        bottom: 10px;
 
+      }
+      
     }
+
+    .search_input {
+      width: auto;
+      height: 40px;
+      line-height: 28px;
+      padding: 0 16px;
+      padding-right: 35px;
+      border: 1px solid rgb(126, 126, 250);
+      border-radius: 5px;
+      outline: none;
+      background-color: #f3f3f4;
+      color: #0d0c22;
+      transition: 0.3s ease;
+
+      @media (max-width: '450px') {
+        width: 100%;
+        height: 30px;
+        border-radius: 4px;
+         margin-bottom: 10px;
+      }
+     
+
+      &:focus,
+      &:hover {
+
+        outline: none;
+        border-color: blue;
+        background-color: #fff;
+        box-shadow: 0px 1px 1px -2px blue;
+      }
+    }
+
+
+
   }
-  
-  .search_input {
-    width: 300px;
-    height: 40px;
-    line-height: 28px;
-    padding: 0 16px;
-    padding-right: 35px;
-    border: 1px solid rgb(126, 126, 250);
-    border-radius: 5px;
-    outline: none;
-    background-color: #f3f3f4;
-    color: #0d0c22;
-    transition: 0.3s ease;
-     @media (max-width: '800px') {
-      margin-top: 20px; 
-      width: 200px; 
-      height: 30px;  
-      border-radius: 4px;  
-
-    }
-    &:focus,&:hover{
-
-outline: none;
-    border-color: blue;
-    background-color: #fff;
-    box-shadow: 0px 1px 1px -2px blue;
-    }
+  .all_products{
   }
-
- 
-
-}
 
 }
